<resources>
    <string name="app_name">cash-you</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_categories">Categories</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_transactions">Transactions</string>
    <string name="title_overview">Overview</string>
    <string name="title_limits">Limits</string>
    <string name="title_subscriptions">Subscriptions</string>

    <string name="title_settings_fingerprint">Fingerprint</string>
    <string name="title_settings_password">Password</string>
    <string name="title_settings_subscriptions">Subscriptions</string>
    <string name="title_settings_limits">Limits</string>

    <string name="title_current_balance">0P</string>
</resources>