<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_categories"
        android:icon="@drawable/ic_categories_black_24dp"
        android:title="@string/title_categories" />

    <item
        android:id="@+id/navigation_accounts"
        android:icon="@drawable/ic_accounts_black_24dp"
        android:title="@string/title_accounts" />

    <item
        android:id="@+id/navigation_transactions"
        android:icon="@drawable/ic_transactions_black_24dp"
        android:title="@string/title_transactions" />

    <item
        android:id="@+id/navigation_overview"
        android:icon="@drawable/ic_overview_black_24dp"
        android:title="@string/title_overview" />

    <item
        android:id="@+id/navigation_subscriptions"
        android:icon="@drawable/ic_settings_subscriptions_24dp"
        android:title="@string/title_subscriptions" />

</menu>