<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/password_switch"
            android:icon="@drawable/ic_settings_password_24dp"
            android:title="@string/title_settings_password"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/fingerprint_switch"
            android:icon="@drawable/ic_settings_fingerprint_24dp"
            android:title="@string/title_settings_fingerprint"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/subscriptions_switch"
            android:icon="@drawable/ic_settings_subscriptions_24dp"
            android:title="@string/title_settings_subscriptions"
            app:actionLayout="@layout/switch_item"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/limits_item"
            android:icon="@drawable/ic_settings_limits_24dp"
            android:title="@string/title_settings_limits" />
    </group>
</menu>